# Smart_Search_Blocket

./: .gitignore  README.md  app.py  eda.ipynb  fetcher.py  main_scanner.py  notifier.py  pyproject.toml  trust_score.py
data/: historical_ads.json  live_ads.json
