[project]
name = "smart-search-blocket"
version = "0.1.0"
description = "A smart assistant that monitors, filters, and scores Blocket ads in real-time."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blocket-api>=0.5.1",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "plyer>=2.1.0",
    "rich>=15.0.0",
    "streamlit>=1.57.0",
    "streamlit-autorefresh>=1.0.1",
]
